# Coursework_4

./: README.md  main.py  pyproject.toml
filemanagers/: csv_file_manager.py  filemanager_abstract.py  json_file_manager.py
utils/: abstract_clas.py  convecter_currency.py  hhru.py  superjob.py  vacancy.py
