[tool.poetry]
name = "coursework-4"
version = "0.1.0"
description = ""
authors = ["kirill <lobbi.kirill@mail.ru>"]
readme = "README.md"
packages = [{include = "coursework_4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pywebio = "^1.8.2"
pandas = "^2.0.2"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
